Fixed a layout bug in the about page.

--- a/src/main.css
+++ b/src/main.css
@@ -20,33 +20,32 @@ html {
 
 .about {
   display: inline;
-  margin: 0 auto;
-  width: 80%; }
+  margin: 0 auto; }
   .about__pic {
+    display: inline;
     width: 80vw;
     padding: 2rem 0; }
     .about__pic--1 {
       border-radius: .5rem;
       width: 100%; }
   .about__text {
+    padding-top: 2rem;
     font-size: 2.5rem;
     font-family: Lato, sans-serif;
     font-weight: 300;
     letter-spacing: 1px;
-    line-height: 1.5;
-    text-justify: inter-word; }
+    line-height: 1.5; }
     .about__text span {
       color: #ffaf4d; }
     @media (max-width: 900px) {
       .about__text {
-        font-size: 1.8rem;
-        max-width: 100%; } }
-
-@media (max-width: 600px) and (max-width: 600px) {
-  .about__text {
-    padding: 0 1rem; } }
+        font-size: 1.8rem; } }
+    @media (max-width: 600px) {
+      .about__text {
+        text-align: center;
+        padding: 1rem .5rem; } }
     .about__text p {
-      width: 100%; }
+      text-align: justify; }
 
 .app {
   display: grid;
