--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,25 +1,37 @@
 .about {
     display: inline;
     margin: 0 auto;
-    width: 80%;
+    
 
     &__pic{
+        display: inline;
         width: 80vw;
         padding: 2rem 0;
+
+        @media (max-width: 900px) {
+            
+         }
+         
+         @media (max-width: 600px) {
+                     
+         }
         
         &--1{
             border-radius: .5rem;
             width: 100%;
+
+            
         }
     }
     
     &__text {
+        padding-top: 2rem;
         font-size: 2.5rem;
         font-family: Lato, sans-serif;
         font-weight: 300;
         letter-spacing: 1px;
         line-height: 1.5;
-        text-justify: inter-word;
+        
 
         & span {
             color: #ffaf4d;
@@ -28,17 +40,15 @@
 
         @media (max-width: 900px) {
            font-size: 1.8rem;
-           max-width: 100%;
         }
         
         @media (max-width: 600px) {
-            @media (max-width: 600px){
-             padding: 0 1rem;         
-            }
+            text-align: center;
+            padding: 1rem .5rem;        
         }
 
         & p {
-            width: 100%;
+            text-align: justify;
         }
     }
 }
